--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -69,30 +69,35 @@ lynx_mvgam <- mvjagam(data_train = lynx_train,
 
 Perform a series of posterior predictive checks to see if the model is able to simulate data for the training period that looks realistic and unbiased. First, examine simulated kernel densities for posterior predictions (`yhat`) and compare to the density of the observations (`y`)
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'density')
+ppc(lynx_mvgam, series = 1, type = 'density')
 ```
 
 Now plot the distribution of predicted means compared to the observed mean
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'mean')
+ppc(lynx_mvgam, series = 1, type = 'mean')
 ```
 
 Next examine simulated empirical Cumulative Distribution Functions (CDF) for posterior predictions (`yhat`) and compare to the CDF of the observations (`y`)
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'cdf')
+ppc(lynx_mvgam, series = 1, type = 'cdf')
+```
+
+Rootograms are becoming [popular graphical tools for checking a discrete model's ability to capture dispersion properties of the response variable](https://arxiv.org/pdf/1605.01311.pdf). Posterior predictive hanging rootograms can be displayed using the `ppc()` function in `mvgam`. In the plot below, we bin the unique observed values into `25` bins to prevent overplotting and help with interpretation. This plot compares the frequencies of observed vs predicted values for each bin, which can help to identify aspects of poor model fit. For example, if the gray bars (representing observed frequencies) tend to stretch below zero, this suggests the model's simulations predict the values in that particular bin less frequently than they are observed in the data. A well-fitting model that can generate realistic simulated data will provide a rootogram in which the lower boundaries of the grey bars are generally near zero
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+ppc(lynx_mvgam, series = 1, type = 'rootogram', n_bins = 25)
 ```
 
 Finally look for any biases in predictions by examining a Probability Integral Transform (PIT) histogram. If our predictions are not biased one way or another (i.e. not consistently under- or over-predicting), this histogram should look roughly uniform
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'pit')
+ppc(lynx_mvgam, series = 1, type = 'pit')
 ```
 
 All of these plots indicate the model is well calibrated against the training data, with no apparent pathological behaviors exhibited. Have a look at this model's summary to see what is being estimated (note that longer MCMC runs would probably be needed to increase effective sample sizes)
 ```{r}
-summary_mvgam(lynx_mvgam)
+summary(lynx_mvgam)
 ```
 
-Of course we should always inpsect traceplots when sampling from a posterior with `MCMC` methods. Here for the `GAM` component (smoothing parameters)
+The `plot_mvgam_...()` functions offer more flexibility than the generic `S3 plot.mvgam()` functions. For example, we can inpsect traceplots when sampling from a posterior with `MCMC` methods. Here for the `GAM` component (smoothing parameters).
 ```{r, fig.width = 7, fig.height = 4.1, fig.align='center'}
 plot_mvgam_trace(lynx_mvgam, 'rho')
 ```
@@ -104,39 +109,39 @@ plot_mvgam_trace(lynx_mvgam, 'trend')
 
 Inspect the model's estimated smooth for the 19-year cyclic pattern, which is shown as a ribbon plot of posterior empirical quantiles. We can also overlay posterior quantiles of partial residuals (shown as ribbon rectangles in red), which represent the leftover variation that the model expects would remain if this smooth term was dropped but all other parameters remained unchanged. Note that these are on a different scale to those from `mgcv::plot.gam` as these are randomised quantile residuals that are essentially standard normal in distribution. But either way, a strong pattern in the partial residuals suggests there would be strong patterns left unexplained in the model *if* we were to drop this term, giving us further confidence that this function is important in the model
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot_mvgam_smooth(lynx_mvgam, 1, 'season', residuals = T)
+plot(lynx_mvgam, type = 'smooths', residuals = T)
 ```
 
-First derivatives of smooth functions can also be plotted to inspect how the slope of the function changes across its length
+First derivatives of smooth functions can also be plotted to inspect how the slope of the function changes across its length. To plot these we use the more flexible `plot_mvgam_smooth()` function
 ```{r, fig.width=5, fig.height=6, fig.align='center'}
 plot_mvgam_smooth(lynx_mvgam, 1, 'season', derivatives = T)
 ```
 
 We can also view the mvgam's posterior retrodictions and predictions for the entire series (testing and training)
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot_mvgam_fc(lynx_mvgam, data_test = lynx_test)
+plot(lynx_mvgam, type = 'forecast', data_test = lynx_test)
 ```
 
-And the estimated latent trend component, again with the option to show first derivatives
+And the estimated latent trend component, again using the more flexible `plot_mvgam_...()` option to show first derivatives of the estimated trend
 ```{r, fig.width=5, fig.height=6, fig.align='center'}
 plot_mvgam_trend(lynx_mvgam, data_test = lynx_test, derivatives = T)
 ```
 
 We can also re-do the posterior predictive checks, but this time focusing only on the out of sample period. This will give us better insight into how the model is performing and whether it is able to simulate realistic and unbiased future values
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'density', data_test = lynx_test)
+ppc(lynx_mvgam, series = 1, type = 'density', data_test = lynx_test)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'mean', data_test = lynx_test)
+ppc(lynx_mvgam, series = 1, type = 'mean', data_test = lynx_test)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'cdf', data_test = lynx_test)
+ppc(lynx_mvgam, series = 1, type = 'cdf', data_test = lynx_test)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(lynx_mvgam, series = 1, type = 'pit', data_test = lynx_test)
+ppc(lynx_mvgam, series = 1, type = 'pit', data_test = lynx_test)
 ```
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate relative contributions to forecast uncertainty for the GAM component and the latent trend component using `mvgam`
@@ -150,7 +155,7 @@ text(1, 0.8, cex = 1.5, label="Trend component",
 
 Both components contribute to forecast uncertainty, suggesting we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
 ```{r, fig.width=6, fig.height=6, fig.align='center'}
-plot_mvgam_resids(lynx_mvgam)
+plot(lynx_mvgam, type = 'residuals')
 ```
 
 Another useful utility of `mvgam` is the ability to use rolling window forecasts to evaluate competing models that may represent different hypotheses about the series dynamics. Here we will fit a poorly specified model to showcase how this evaluation works. In this model, we ignore the cyclic pattern of seasonality and force it to be fairly non-wiggly. We also use a random walk process for the trend
@@ -185,3 +190,5 @@ mean(mod2_eval$series1$in_interval)
 
 The `compare_mvgams` function automates this process by rolling along a set of timepoints for each model, ensuring a more in-depth evaluation of each competing model at the same set of timepoints. There are many more extended uses for `mvgam` models, including the ability to fit dynamic factor processes for analysing and forecasting sets of multivariate discrete time series
 
+# License
+This project is licensed under an `MIT` open source license
