--- a/NEON_manuscript/Case studies/mvgam_case_study3.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study3.Rmd
@@ -96,45 +96,57 @@ data_test <- list(lag = data_all$lag[175:length(data_all$y),],
                   mintemp = data_all$mintemp[175:length(data_all$y),])
 ```
 
-Now we can fit a dynamic GAM with distributed lag terms for precipitation and minimum temperature and an `AR3` process for the unobserved temporal trend. The distributed lags are set up as tensor product smooth functions (see `help(te)` for an explanation of tensor product smooth constructions in the `mgcv` package) between `lag` and each covariate. Given the overdispersion in the data, we will assume a [`Geometric-Poisson`](https://en.wikipedia.org/wiki/Geometric_Poisson_distribution) observation model, which can be [more flexible than the `Negative binomial` for modelling overdispersed count data](https://www.jstor.org/stable/2533492?origin=crossref&seq=1). In `mvgam` the `Geometric-Poisson` is estimated as a `Tweedie-Poisson` model with the power parameter `p` fixed at `1.5`
+Now we can fit a dynamic GAM with distributed lag terms for precipitation and minimum temperature and an `AR1` process for the unobserved temporal trend. The distributed lags are set up as tensor product smooth functions (see `help(te)` for an explanation of tensor product smooth constructions in the `mgcv` package) between `lag` and each covariate. Given the overdispersion in the data, we will assume a [`Geometric-Poisson`](https://en.wikipedia.org/wiki/Geometric_Poisson_distribution) observation model, which can be [more flexible than the `Negative binomial` for modelling overdispersed count data](https://www.jstor.org/stable/2533492?origin=crossref&seq=1). In `mvgam` the `Geometric-Poisson` is estimated as a `Tweedie-Poisson` model with the power parameter `p` fixed at `1.5`
 ```{r, message=FALSE, warning=FALSE}
-test <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
-                  te(precip, lag, k = c(8, 4)),
+mod1 <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
+                 te(precip, lag, k = c(8, 4)),
                 data_train = data_train,
                 data_test = data_test,
                 family = 'tw',
                 chains = 4,
-                burnin = 15000,
-                trend_model = 'AR3')
+                burnin = 20000,
+                trend_model = 'AR1')
 ```
 
 The summary of the model provides useful information on convergence for unobserved parameters
 ```{r}
-summary_mvgam(test)
+summary(mod1)
+```
+
+The overdispersion parameter of the `Tweedie-Poisson` distribution is not converging, most likely because it is taking on very small values and any change in this region does not have a major impact on the resulting predictions. This is evidence that overdispersion is not fully supported. We can therefore simplify the model and estimate a `Poisson` observation process instead
+```{r, message=FALSE, warning=FALSE}
+mod2 <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
+                 te(precip, lag, k = c(8, 4)),
+                data_train = data_train,
+                data_test = data_test,
+                family = 'poisson',
+                chains = 4,
+                burnin = 20000,
+                trend_model = 'AR1')
 ```
 
 As with all other `mvgam` objects, we can create plots of the estimated forecast distribution and the dynamic latent trend process (with 1st derivatives shown to inspect time periods of substantial upward or downward change in the latent trend)
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_fc(test, series = 1, data_test = data_test, ylim = c(0, 100))
+plot_mvgam_fc(mod2, series = 1, data_test = data_test, ylim = c(0, 100))
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_trend(test, series = 1, data_test = data_test, derivatives = T)
+plot_mvgam_trend(mod2, series = 1, data_test = data_test, derivatives = T)
 ```
 
 Traceplots of smooth penalties and latent trend parameters indicate good mixing and convergence of the four MCMC chains, as well as providing evidence that the data have informed posterior estimates that have shifted away from the prior distributions for many of these parameters
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_trace(test, 'rho')
-plot_mvgam_trace(test, 'trend')
+plot_mvgam_trace(mod2, 'rho')
+plot_mvgam_trace(mod2, 'trend')
 ```
 
 We can also create quick plots of the estimated smooth tensor product interactions for the distributed lag terms, which basically follow `mgcv`'s two-dimensional plotting utility but uses the `mvgam`'s estimated coefficients
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_smooth(test, series = 1, smooth = 1)
+plot_mvgam_smooth(mod2, series = 1, smooth = 1)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_smooth(test, series = 1, smooth = 2)
+plot_mvgam_smooth(mod2, series = 1, smooth = 2)
 ```
 
 If you are like me then you'll find these plots rather difficult to interpret! The more intense yellow/white colours indicate higher predicted values, with the deeper red colours representing lower predicted values, but actually making sense of how the functional response is expected to change over different lags is not easy from these plots. HOwever, we can use the `predict_mvgam` function to generate much more interpretable plots. First we will focus on the effect of `mintemp` and generate a series of predictions to visualise how the estimated function changes over different lags. Set up prediction data by zeroing out all covariates apart from the covariate of interest
@@ -159,7 +171,7 @@ plot(1, type = "n",
 # value for centring the plot
 newdata$mintemp <- matrix(0, ncol = ncol(newdata$mintemp),
                          nrow = nrow(newdata$mintemp))
-preds <- predict_mvgam(test, series = 1, newdata = newdata, type = 'link')
+preds <- predict(mod2, series = 1, newdata = newdata, type = 'link')
 offset <- mean(preds)
 
 for(i in 1:6){
@@ -172,7 +184,7 @@ for(i in 1:6){
                              length.out = length(newdata$year))
 
   # Predict on the link scale and shift by the offset so that values are roughly centred at zero
-  preds <- predict_mvgam(test, series = 1, newdata = newdata, type = 'link') - offset
+  preds <- predict(mod2, series = 1, newdata = newdata, type = 'link') - offset
 
   # Calculate empirical prediction quantiles
   probs = c(0.05, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.95)
@@ -206,7 +218,7 @@ newdata$mintemp <- matrix(0, ncol = ncol(newdata$mintemp),
                          nrow = nrow(newdata$mintemp))
 newdata$precip <- matrix(0, ncol = ncol(newdata$precip),
                          nrow = nrow(newdata$precip))
-preds <- predict_mvgam(test, series = 1, newdata = newdata, type = 'link')
+preds <- predict(mod2, series = 1, newdata = newdata, type = 'link')
 offset <- mean(preds)
 plot(1, type = "n",
      xlab = 'Precipitation',
@@ -220,7 +232,7 @@ for(i in 1:6){
   newdata$precip[,i] <- seq(min(data_train$precip),
                              max(data_train$precip),
                              length.out = length(newdata$year))
-  preds <- predict_mvgam(test, series = 1, newdata = newdata, type = 'link') - offset
+  preds <- predict(mod2, series = 1, newdata = newdata, type = 'link') - offset
   probs = c(0.05, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.95)
   cred <- sapply(1:NCOL(preds),
                  function(n) quantile(preds[,n],
@@ -243,12 +255,12 @@ legend('topleft', legend = paste0('lag', seq(0, 5)),
 
 All of the usual functions in `mvgam` can also be used for list data objects, so long as they contain the necessary fields `series`, `season` and `year`. For example, posterior retrodictive checks for the in-sample training period: 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(test, series = 1, type = 'cdf')
+ppc(mod2, series = 1, type = 'cdf')
 ```
 
 and predictive checks for the out of sample forecast period (which demonstrates how the model tends to overpredict for the forecast period in this particular example):
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_ppc(test, data_test = data_test, series = 1, type = 'cdf')
+ppc(mod2, data_test = data_test, series = 1, type = 'cdf')
 ```
 
 Logical next steps for interrogating this model would be to trial different trend types (i.e. random walk), replace the distributed lag function for `precip` with a standard smooth function (that does not include lag interactions, as clearly the model above indicates that these are not supported) and inspect whether different covariates (such as `ndvi` or `maxtemp`) might play a role in modulating catches of `PP`. Finally, once we are satisfied that we have a well-performing model that we can understand and interrogate, we could expand up to a multivariate model by including other species as response variables. This would allow us to capture any possible unobserved dependencies in the catches of multiple co-occurring species in a single unified modelling framework
